resolve background issue on mobile

--- a/style.css
+++ b/style.css
@@ -14,5 +14,6 @@ body {
     background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-size: 100% 100%;
+    background-attachment: fixed;
     user-select: none;
 }
